# fcitx5-lotus

./: .all-contributorsrc  .gitignore  CMakeLists.txt  README.en.md  README.md
.github/workflows/: build.yml  packaging-dev.yml  packaging-release.yml
bamboo/: fcitxbambooengine.go
keymap-editor/: editor.cpp  editor.h
macro-editor/: CMakeLists.txt  editor.cpp  editor.h  macro-editor.json  main.cpp  main.h
misc/: CMakeLists.txt
packaging/debian/: changelog
packaging/rpm/fedora/: fcitx5-lotus.spec
packaging/rpm/opensuse/: fcitx5-lotus.spec
po/: fcitx5-lotus.pot  vi.po
server/: lotus-server.cpp
settings-gui/: main.py  org.fcitx.Fcitx5.Addon.Lotus.Settings.desktop.in
settings-gui/core/: dbus_handler.py
settings-gui/ui/: main_window.py
settings-gui/ui/pages/: dict_editor.py  dynamic_settings.py  keymap_editor.py  macro_editor.py  mode_manager.py
src/: lotus-config.h  lotus-engine.cpp  lotus-monitor.cpp  lotus-state.cpp  lotus-state.h
